# Causomic

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/indra/: egfr_prior.csv
src/causomic/: __init__.py  _optional.py  network.py  workflows.py
src/causomic/causal_model/: LVM.py  __init__.py  models.py
src/causomic/data_analysis/: __init__.py  gene_set.py  pathway_analysis.py  pathway_correlation_analysis.py  proteomics_data_processor.py
src/causomic/graph_construction/: __init__.py  indra_queries.py  neo4j_indra_queries.py  prior_data_reconciliation.py  repair.py  search_path_diagnostic.py  utils.py  utils_neo4j.py  utils_nx.py
src/causomic/simulation/: __init__.py  cyclic_network.py  example_graphs.py  proteomics_simulator.py  random_network.py  test_notears.py
src/causomic/validation/: __init__.py  benchmark_workflow.py  network_comparison.py
tests/: conftest.py  test_causal_model.py  test_cyclic_network.py  test_example_graphs.py  test_gene_set.py  test_network.py  test_network_comparison.py  test_pathway_analysis.py  test_pathway_correlation_analysis.py  test_prior_data_reconciliation.py  test_proteomics_processor.py  test_proteomics_simulator.py  test_random_network.py  test_repair.py  test_search_path_diagnostic.py  test_utils_nx.py  test_workflows.py
tests/data/: example_pathways.json
vignettes/: user_manual.ipynb
vignettes/simulations/: IGF_PTM.ipynb  IGF_simulation_analysis.ipynb  Supplementary_analysis.ipynb  TF_MYC_simulation.ipynb  benchmark_posterior_accuracy.py  ci_method_validation.py  confounder.ipynb  run_benchmark.sh  structured_dag_examples.ipynb
vignettes/simulations/benchmarks/baseline/: aic_no_benchmark.py  aic_prior_benchmark.py  bic_no_prior_benchmark.py  bic_prior_benchmark.py
vignettes/simulations/benchmarks/causica/: causica_benchmark.py
vignettes/simulations/benchmarks/confounder/: benchmark_confounder.py
vignettes/simulations/benchmarks/cycles/: benchmark_cycles.py
vignettes/simulations/benchmarks/graph_baseline/: benchmark_dagma_full.py  benchmark_graph_baseline.py  benchmark_interventional_nodes.csv  benchmark_results.csv
vignettes/simulations/benchmarks/linear_comparison/: benchmark_linear_comparison.py
vignettes/simulations/benchmarks/missing_edges/: benchmark_missing_edges.py
