# See https://setuptools.readthedocs.io/en/latest/build_meta.html
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causomic"
version = "0.0.1-dev"
description = "Python code for causal modeling of proteomics data."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"

authors = [
	{ name = "Devon Kohler", email = "kohler.d@northeastern.edu" },
]

maintainers = [
  { name = "Devon Kohler", email = "kohler.d@northeastern.edu" },
]

dependencies = [
	"networkx",
	"pandas",
	"pyro-ppl==1.8.5",
	"torch",
	"numpy",
	"scipy",
	"scikit-learn",
	"pgmpy",
	"joblib",
	"tqdm",
	"seaborn",
	"y0",
	"numpyro",
	"jax",
	"matplotlib",
	"namedlist",
	"py3compat",
	"python-dotenv",
]

[project.urls]
Homepage = "https://github.com/devonjkohler/CausOmic"
"Bug Tracker" = "https://github.com/devonjkohler/CausOmic/issues"
"Source Code" = "https://github.com/devonjkohler/CausOmic"

[project.optional-dependencies]
indra = [
	"indra",
	"indra-cogex",
	"protmapper",
]

notears = [
	"notears @ git+https://github.com/xunzheng/notears.git",
]

[tool.setuptools]
include-package-data = true
zip-safe = false
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
reverse_relative = true