# See https://setuptools.readthedocs.io/en/latest/build_meta.html
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causomic"
version = "0.0.1-dev"
description = "Python code for causal modeling of proteomics data."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.10,<3.12"

authors = [
	{ name = "Devon Kohler", email = "kohler.d@northeastern.edu" },
]

maintainers = [
  { name = "Devon Kohler", email = "kohler.d@northeastern.edu" },
]

dependencies = [
	"networkx",
	"pandas",
	"pyro-ppl==1.8.5",
	"torch==2.0.1",
	"numpy<2",
	"scipy",
	"scikit-learn",
	"pgmpy",
	"joblib",
	"tqdm",
	"seaborn",
	"y0",
	"indra @ git+https://github.com/gyorilab/indra.git",
	"indra-cogex @ git+https://github.com/gyorilab/indra_cogex.git",
	"protmapper",
	"numpyro",
	"jax",
	"matplotlib",
	"flask",
	"namedlist",
	"py3compat",
	"python-dotenv",
	"gseapy",
]

[project.urls]
Homepage = "https://github.com/Vitek-Lab/Causomic"
"Bug Tracker" = "https://github.com/Vitek-Lab/Causomic/issues"
"Source Code" = "https://github.com/Vitek-Lab/Causomic"

[project.optional-dependencies]
notears = [
	"notears @ git+https://github.com/xunzheng/notears.git",
]
test = [
	"pytest>=7",
	"pytest-cov",
]
dev = [
	"causomic[test]",
	"black",
	"isort",
]

[tool.setuptools]
include-package-data = true
zip-safe = false
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
reverse_relative = true
