# See https://setuptools.readthedocs.io/en/latest/build_meta.html
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causomic"
version = "0.9.0"
description = "Python code for causal modeling of proteomics data."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"

authors = [
	{ name = "Devon Kohler", email = "kohler.d@northeastern.edu" },
]

maintainers = [
  { name = "Devon Kohler", email = "kohler.d@northeastern.edu" },
]

keywords = [
	"causal inference",
	"proteomics",
	"omics",
	"bayesian",
	"structural causal model",
	"intervention prediction",
	"systems biology",
	"bioinformatics",
	"INDRA",
	"pyro",
	"graphical models",
]

classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Scientific/Engineering :: Bio-Informatics",
	"Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
	"networkx",
	"pandas",
	"pyro-ppl==1.8.5",
	"torch==2.0.1",
	"numpy<2",
	"scipy",
	"scikit-learn",
	"pgmpy",
	"joblib",
	"tqdm",
	"seaborn",
	"y0",
	"indra",
	# indra depends on pysb; pin to the only version that ships a wheel (older
	# sdists use a broken ez_setup bootstrap that fails to build).
	"pysb>=1.17.0",
	"protmapper",
	"numpyro",
	"jax",
	"matplotlib",
	"flask",
	"namedlist",
	"py3compat",
	"python-dotenv",
	"gseapy",
]

[project.urls]
Homepage = "https://github.com/Vitek-Lab/Causomic"
"Bug Tracker" = "https://github.com/Vitek-Lab/Causomic/issues"
"Source Code" = "https://github.com/Vitek-Lab/Causomic"

[project.optional-dependencies]
test = [
	"pytest>=7",
	"pytest-cov",
]
dev = [
	"causomic[test]",
	"black==25.9.0",
	"isort==8.0.1",
]

[tool.setuptools]
include-package-data = true
zip-safe = false
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
reverse_relative = true
